[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ayush Shukla <ayush.shukla@npci.org.in>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
expand = "0.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
reqwest = "0.11"